--- a/.travis.yml
+++ b/.travis.yml
@@ -4,8 +4,8 @@ python:
   - "3.6"
 
 env:
-  - DJANGO_SETTINGS_MODULE=""
-  - DJANGO_SETTINGS_MODULE=""
+  - DJANGO_SETTINGS_MODULE="ecom.settings.development"
+  - DJANGO_SETTINGS_MODULE="ecom.settings.production"
 
 install:
   - pip install -r requirements.txt
