--- a/requirements.txt
+++ b/requirements.txt
@@ -4,14 +4,18 @@ certifi==2019.9.11
 chardet==3.0.4
 colorama==0.4.1
 defusedxml==0.6.0
+dj-database-url==0.5.0
 Django==2.1.5
 django-allauth==0.40.0
 django-debug-toolbar==2.1
+django-heroku==0.3.1
+gunicorn==20.0.0
 idna==2.8
 isort==4.3.21
 lazy-object-proxy==1.4.3
 mccabe==0.6.1
 oauthlib==3.1.0
+psycopg2==2.8.4
 pycodestyle==2.5.0
 pylint==2.4.4
 python3-openid==3.1.0
