--- a/requirements.txt
+++ b/requirements.txt
@@ -7,8 +7,8 @@ defusedxml==0.6.0
 dj-database-url==0.5.0
 Django==2.1.5
 django-allauth==0.40.0
+django-crispy-forms==1.8.0
 django-debug-toolbar==2.1
-django-heroku==0.3.1
 gunicorn==20.0.0
 idna==2.8
 isort==4.3.21
