--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ defusedxml==0.6.0
 dj-database-url==0.5.0
 Django==2.1.5
 django-allauth==0.40.0
+django-countries==5.5
 django-crispy-forms==1.8.0
 django-debug-toolbar==2.1
 gunicorn==20.0.0
@@ -24,6 +25,7 @@ requests==2.22.0
 requests-oauthlib==1.3.0
 six==1.13.0
 sqlparse==0.3.0
+stripe==2.40.0
 typed-ast==1.4.0
 urllib3==1.25.7
 whitenoise==4.1.4
